tests/baselines/reference/unicodeExtendedEscapesInRegularExpressions04(target=es5).errors.txt
unicodeExtendedEscapesInRegularExpressions04.ts(1,24): error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.


==== unicodeExtendedEscapesInRegularExpressions04.ts (1 errors) ====
    var x = /\u{00000000}/gu;
                           ~
!!! error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.
    